DigicielFull/force-app/main/default/objects/Custom_Chart__c/Custom_Chart__c.object-meta.xml
<CustomObject>
    <label>Custom Chart</label>
    <nameField>
        <label>Custom Chart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Charts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>