DigicielFull/force-app/main/default/objects/Custom_Chart__c/fields/Base_Object__c.field-meta.xml
<CustomField>
    <fullName>Base_Object__c</fullName>
    <description>Base Object for the chart.</description>
    <label>Base Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>