DigicielFull/force-app/main/default/objects/Custom_Chart__c/fields/Base_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Base_Object_API_Name__c</fullName>
    <description>Base Object API Name for query of chart data.</description>
    <label>Base Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>