DigicielFull/force-app/main/default/objects/Custom_Chart__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>