DigicielFull/force-app/main/default/objects/Custom_Chart__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bar Chart</fullName>
                <default>true</default>
                <label>Bar Chart</label>
            </value>
            <value>
                <fullName>Column Chart</fullName>
            </value>
            <value>
                <fullName>Line Chart</fullName>
            </value>
            <value>
                <fullName>Pie Chart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>